# python-project-83

./: .env.example  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page_analyzer.yml
page_analyzer/: __init__.py  app.py  parser.py  urls.py
page_analyzer/templates/: basic.html  home.html
page_analyzer/templates/error/: 404.html  500.html
page_analyzer/templates/urls/: details.html  main.html
tests/: conftest.py  test_homepage.py
