[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "3-rd project \"Page Analyzer\""
authors = ["Gregory Saliba <gregtmj@gmail.com>"]
readme = "README.md"
packages = [
    {include = "page_analyzer"}
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"
pytest = "^7.2.0"
werkzeug = "^2.2.2"
pytest-cov = "^4.0.0"
psycopg2-binary = "^2.9.5"
validators = "^0.20.0"
requests = "^2.28.1"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
